# stonks

./: .gitignore  404.html  README.md  allfiles.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs-uv.yml
.hatch/: .gitignore
docs/: getting-started.md  index.md
docs/guides/: data_preprocessing.md  ingestion.md
docs/research/: volatility_forecasting.md
getting-started/: index.html
guides/data_preprocessing/: index.html
guides/feature_engineering/: index.html
guides/ingestion/: index.html
guides/plotting/: index.html
notebooks/: .env  long_short_arb.ipynb  momentum.ipynb  options.ipynb  survival_modeling.ipynb  time_series.ipynb
research/volatility_forecasting/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/theory/: index.html
site/usage/: index.html
src/stonks/: data_preprocessing.py  feature_engineering.py  plotting.py
stonks.git/: config  packed-refs
stonks.git.bfg-report/2025-08-18/07-53-21/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
stonks.git/info/: refs
stonks.git/objects/info/: commit-graph  packs
stonks.git/objects/pack/: pack-1ea7c4f4ccc274afe378afe72053e792c2528c35.bitmap  pack-1ea7c4f4ccc274afe378afe72053e792c2528c35.idx  pack-1ea7c4f4ccc274afe378afe72053e792c2528c35.pack
