[project]
name = "stonks"
version = "0.1.0"
description = "A misadventure into stocks"
requires-python = ">=3.10"
packages = [{ include = "stonks" }]

[project.optional-dependencies]
dev = [
  "ipython",
  "jupyterlab",
  "pytest",
  "black",
  "ruff",
  "scipy",
  "statsmodels",
  "quantlib",
  "riskfolio-lib",
]

[dependency-groups]
default = [
  "pandas",
  "requests",
  "skfolio",
  "dotenv",            # keeping as "dotenv" since you confirmed
  "numpy",
  "matplotlib",
  "ipykernel",
  "polygon-api-client",
  "mplfinance",
  "seaborn",
]
dev = [
  "ipython",
  "jupyterlab",
  "pytest",
  "black",
  "ruff",
  "scipy",
  "statsmodels",
  "quantlib",
  "riskfolio-lib",
]
docs = [
  "mkdocs>=1.4",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.19",
]

[tool.hatch.envs.stonks-dev]
python = "3.12"
directory = ".hatch/stonks-dev"
extras = ["dev"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.4",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.19"
]

[tool.hatch.envs.docs.scripts]
build  = "mkdocs build --clean --strict"
serve  = "mkdocs serve --dev-addr localhost:8000"
deploy = "mkdocs gh-deploy -m 'Deploy site'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["stonks"]






